# app-apifunnel-ai

./: .env.example  .gitignore  HANDOFF.md  docker-compose.yml  package-lock.json  package.json  run_server.py
.github/workflows/: deploy.yml
agent_readme/: DIRECTORY.md
plans/: LAKEHOUSE_DXF_VIEW_SUPPORT.md  LAKEHOUSE_MIGRATION_SERVER.md  LAKEHOUSE_UNIFY_ROUTES.md  REPO_SEARCH_SERVICE.md  test-plan.md
project_overview/: ADDING_NEW_SERVICES.md  ARCHITECTURE.md  AUTH_IDENTITY_CONTRACT.md  DIRECTORY.md  OPERATIONS.md  PRBOT_SERVICE.md  PROVIDER_API_KEYS.md  TESTING.md  VIDEO_ANALYSIS.md
proxy/: Caddyfile  Caddyfile.dev
scripts/: dev.sh  prod.sh
services/lakehouse/: Dockerfile  pyproject.toml  run_server.py
services/lakehouse/openapi/: lakehouse.yaml
services/lakehouse/scripts/: backfill_embeddings.py
services/lakehouse/src/: auth.py  db.py  main.py
services/lakehouse/src/routes/: external.py  internal.py
services/lakehouse/src/services/: assets.py  embeddings.py
services/lakehouse/src/storage/: s3.py
services/prbot/: Dockerfile  pyproject.toml
services/prbot/openapi/: prbot.yaml
services/prbot/src/: auth.py  db.py  main.py
services/prbot/src/database/: api_keys.py  github_app_installations.py  job_tokens.py  run_reports.py  user_tokens.py
services/prbot/src/prompts/: __init__.py  coding_agent.md  mcp_config.json  workspace_mcp_server.py
services/prbot/src/routes/: external.py
services/prbot/src/services/: dispatch.py  github_api.py  github_app.py  preflight.py
services/reposearch/: Dockerfile  pyproject.toml
services/reposearch/openapi/: reposearch.yaml
services/reposearch/src/: auth.py  config.py  db.py  main.py  models.py
services/reposearch/src/routes/: external.py
services/reposearch/src/services/: github.py  indexer.py  searcher.py
services/reposearch/src/storage/: s3.py
src/: index.ts
(+57 files in other folders)
