[project]
name = "reposearch-api"
version = "1.0.0"
description = "Semantic search over GitHub repositories"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "motor>=3.3.0",
    "boto3>=1.35.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
